data/derived/fa15/progs/unify/prog0788.ml.out
Characters 119-135:
  	|[] -> (0,(sum / 10) :: (0,(sum mod 10)) :: a)
                           ^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
